@@ -1,3 +1,15 @@
+2015-04-07  Benjamin Poulain  <benjamin@webkit.org>
+
+        Get the features.json files ready for open contributions
+        https://bugs.webkit.org/show_bug.cgi?id=143436
+
+        Reviewed by Darin Adler.
+
+        * Scripts/webkitpy/style/checkers/jsonchecker.py:
+        (JSONFeaturesChecker.check):
+        Extend the syntax checking a bit, but leave everything non-mandatory
+        very loose until we figure what fields are important.
+
 2015-04-07  Tim Horton  <timothy_horton@apple.com>
 
         Expose and test fixedLayoutSize via modern WebKit SPI
